--- a/4-ml.tex
+++ b/4-ml.tex
@@ -514,7 +514,8 @@ In this section, the performance of the ML model, which learned the joint effect
 \centering
   \begin{subfigure}[b]{0.48\textwidth}
   \centering
-    \includegraphics[width=\textwidth]{figures/4-ml/main/Scatterplot_G1_prediction.pdf}
+    \includegraphics[width=\textwidth]{figures/4-ml/main/Scatterplot_G1_prediction.jpeg}
+    % \includegraphics[width=\textwidth]{figures/4-ml/main/Scatterplot_G1_prediction.pdf}
     \caption{Final model prediction}\label{fgr:G1_prediction}
   \end{subfigure}
   \begin{subfigure}[b]{0.48\textwidth}
@@ -532,9 +533,11 @@ To assess the possibility of training a better model with an increased amount of
 
 \begin{figure}[ht]
   \centering
-    \includegraphics[width=0.48\linewidth]{figures/4-ml/SI_figure/Scatterplot_S1_prediction.pdf}
+    \includegraphics[width=0.48\linewidth]{figures/4-ml/SI_figure/Scatterplot_S1_prediction.jpeg}
+    % \includegraphics[width=0.48\linewidth]{figures/4-ml/SI_figure/Scatterplot_S1_prediction.pdf}
     \hfill
-    \includegraphics[width=0.48\linewidth]{figures/4-ml/SI_figure/Scatterplot_S1_prediction_logscale.pdf}
+    % \includegraphics[width=0.48\linewidth]{figures/4-ml/SI_figure/Scatterplot_S1_prediction_logscale.pdf}
+    \includegraphics[width=0.48\linewidth]{figures/4-ml/SI_figure/Scatterplot_S1_prediction_logscale.jpeg}
     \caption{Scatterplots of the selectivity predicted by the model of ML compared to the selectivity calculated by GCMC in both log and linear scales. The blue points correspond to the training data while the test data is shown in orange. The focus is on the test data since it shows the generalization of the ML model to unseen data. The corresponding errors for the ambient-pressure selectivity are 2.5 and 1.1 for respectively the RMSE and MAE of the selectivity, and 0.065 and 0.038 for the RMSE and MAE of its base-10 logarithm. }\label{fgr:S1_prediction}
   \end{figure}
 
