--- a/5-diffusion.tex
+++ b/5-diffusion.tex
@@ -195,8 +195,10 @@ Beyond the practical considerations regarding the calculation of geometrical des
 
 \begin{figure}[ht]
   \centering
-    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/D_log-diameter_ccdc_colored_s_+.pdf}
-    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/D_log-diameter_colored_s_+.pdf}
+    % \includegraphics[width=0.48\textwidth]{figures/5-diffusion/D_log-diameter_ccdc_colored_s_+.pdf}
+    % \includegraphics[width=0.48\textwidth]{figures/5-diffusion/D_log-diameter_colored_s_+.pdf}
+    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/D_log-diameter_ccdc_colored_s_+.jpeg}
+    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/D_log-diameter_colored_s_+.jpeg}
     \caption{Xenon diffusion coefficient at infinite dilution as a function of the pore limiting diameter (PLD). The diameter of the largest free sphere is defined using two different radius systems: the standard CCDC-based PLD (on the left), and the one defined using the UFF forcefield (on the right)\autocite{Hung_2021} --- as defined in Chapter 2. }\label{fgr:diff_pld}
 \end{figure}
 
@@ -204,9 +206,12 @@ If the channel dimensions (determined using Zeo++) are analyzed, partial informa
 
 \begin{figure}[ht]
   \centering
-    \includegraphics[width=0.32\textwidth]{figures/5-diffusion/D_log-PLD_1D_chan.pdf}
-    \includegraphics[width=0.32\textwidth]{figures/5-diffusion/D_log-PLD_2D_chan.pdf}
-    \includegraphics[width=0.32\textwidth]{figures/5-diffusion/D_log-PLD_3D_chan.pdf}
+    \includegraphics[width=0.32\textwidth]{figures/5-diffusion/D_log-PLD_1D_chan.jpeg}
+    \includegraphics[width=0.32\textwidth]{figures/5-diffusion/D_log-PLD_2D_chan.jpeg}
+    \includegraphics[width=0.32\textwidth]{figures/5-diffusion/D_log-PLD_3D_chan.jpeg}
+    % \includegraphics[width=0.32\textwidth]{figures/5-diffusion/D_log-PLD_1D_chan.pdf}
+    % \includegraphics[width=0.32\textwidth]{figures/5-diffusion/D_log-PLD_2D_chan.pdf}
+    % \includegraphics[width=0.32\textwidth]{figures/5-diffusion/D_log-PLD_3D_chan.pdf}
     \caption{ Distributions of the base-10 logarithm of the diffusion coefficients of three different subsets of the screened structures. The first one (a) is composed of structures with a unidimensional channel, the second (b) bidimensional channels and the third one (c) tridimensional channels. }\label{fgr:scatter_diffusion_chandim}
 \end{figure}
 
@@ -224,8 +229,10 @@ Other geometric properties of the material, such as void fraction and surface ar
 
 \begin{figure}[ht]
   \centering
-    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/D_log-vf_2_s_+.pdf}
-    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/D_log-sa_12_s_+.pdf}
+    % \includegraphics[width=0.48\textwidth]{figures/5-diffusion/D_log-vf_2_s_+.pdf}
+    % \includegraphics[width=0.48\textwidth]{figures/5-diffusion/D_log-sa_12_s_+.pdf}
+    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/D_log-vf_2_s_+.jpeg}
+    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/D_log-sa_12_s_+.jpeg}
     \caption{Xenon diffusion coefficient at infinite dilution as a function of the accessible surface area (left) and the void fraction (right). }\label{fgr:diff_sa_vf}
 \end{figure}
 
@@ -233,8 +240,10 @@ Framework density and molar mass are immediate characteristics of the structure 
 
 \begin{figure}[ht]
   \centering
-    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/D_log-density_s_+.pdf}
-    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/D_log-mass_s_+.pdf}
+    % \includegraphics[width=0.48\textwidth]{figures/5-diffusion/D_log-density_s_+.pdf}
+    % \includegraphics[width=0.48\textwidth]{figures/5-diffusion/D_log-mass_s_+.pdf}
+    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/D_log-density_s_+.jpeg}
+    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/D_log-mass_s_+.jpeg}
     \caption{Xenon diffusion coefficient at infinite dilution as a function of the density (left) and the mass (right) of the frameworks. }\label{fgr:diff_density_mass}
 \end{figure}
 
@@ -242,8 +251,10 @@ The largest sphere diameter D$_{if}$ along a free diffusion path exhibits a simi
 
 \begin{figure}[ht]
   \centering
-    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/D_log-lcd_s_+.pdf}
-    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/D_log-H_Xe_s_+.pdf}
+    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/D_log-lcd_s_+.jpeg}
+    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/D_log-H_Xe_s_+.jpeg}
+    % \includegraphics[width=0.48\textwidth]{figures/5-diffusion/D_log-lcd_s_+.pdf}
+    % \includegraphics[width=0.48\textwidth]{figures/5-diffusion/D_log-H_Xe_s_+.pdf}
     \caption{Xenon diffusion coefficient at infinite dilution as a function of the largest sphere diameter D$_{if}$ along a free diffusion path (left) and the xenon adsorption enthalpy (right). }\label{fgr:diff_H_lcd}
 \end{figure}
 
@@ -259,8 +270,10 @@ The comparison between xenon/krypton selectivity at infinite dilution and xenon/
 
 \begin{figure}[ht]
   \centering
-    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/D_xe-s0-lcd.pdf}
-    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/D_kr-s0-lcd.pdf}
+    % \includegraphics[width=0.48\textwidth]{figures/5-diffusion/D_xe-s0-lcd.pdf}
+    % \includegraphics[width=0.48\textwidth]{figures/5-diffusion/D_kr-s0-lcd.pdf}
+    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/D_xe-s0-lcd.jpeg}
+    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/D_kr-s0-lcd.jpeg}
     \caption{On the left panel, the Xe/Kr diffusion selectivity (ratio of the diffusion coefficients) is plotted against the Xe/Kr selectivity values at infinite dilution (calculated by Widom insertion), and the points are color-coded by the largest cavity diameter within a diffusion path D$_{if}$. On the right panel, the same plot is now color-coded with the average dimension of the channels of the nanoporous structures associated. }\label{fgr:diff_s0_lcd}
 \end{figure}
 
@@ -276,9 +289,11 @@ where $s\ex{Xe/Kr}\e{ads}$ corresponds to the adsorption selectivity used throug
 
 \begin{figure}[ht]
   \centering
-    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/diff_D_xekr-s0-lcd.pdf}
-    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/diff_D_xekr-s0-chandim.pdf}
-    \caption{}\label{fgr:perm_selec0}
+    % \includegraphics[width=0.48\textwidth]{figures/5-diffusion/diff_D_xekr-s0-lcd.pdf}
+    % \includegraphics[width=0.48\textwidth]{figures/5-diffusion/diff_D_xekr-s0-chandim.pdf}
+    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/diff_D_xekr-s0-lcd.jpeg}
+    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/diff_D_xekr-s0-chandim.jpeg}
+    \caption{The xenon/krypton diffusion selectivity plotted against the low-pressure selectivity for a 20:80 Xe/Kr composition and color-coded by the LCD within a diffusion path D$_{if}$ (left panel) and by the average dimension of channels (right panel).}\label{fgr:perm_selec0}
 \end{figure}
 
 Using both $s\ex{Xe/Kr}\e{diff}$ and $s\ex{Xe/Kr}\e{ads}$ at different pressure conditions, this study will try to find materials that exhibit a relatively high selectivity with high diffusion selectivity. The plots presented in Figure~\ref{fgr:perm_selec0} demonstrate that a total of 48 structures display a selectivity above $40$, along with a good diffusion selectivity over $0.1$. Notably, these structures possess rather large pore sizes, represented by the largest included sphere along a free diffusion path $D_{if}$ as depicted in the left plot of Figure~\ref{fgr:perm_selec0}. Additionally, these large pores are associated with structures that exhibit various dimensionalities. Among these structures, one particular standout is characterized by exceptionally high diffusion selectivity (over $15$, as indicated by the gray point on the upper right side of the left plot of Figure~\ref{fgr:perm_selec0}) coupled with a high adsorption selectivity at infinite dilution. It is worth mentioning that this structure, with a CSD code \texttt{ADOGEH}\cite{Peikert_2012}, features a three-dimensional channel framework with large pores and relatively narrow connecting channels. However, the high adsorption selectivity observed at infinite dilution is not maintained under ambient pressure conditions, as illustrated in Figure~\ref{fgr:perm_selec2080} (refer to Table~\ref{table:diff} for further details).
@@ -287,8 +302,10 @@ Upon closer examination of these 48 structures, it becomes evident that they inc
 
 \begin{figure}[ht]
   \centering
-    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/diff_D_xekr-s2080-lcd.pdf}
-    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/diff_D_xekr-s2080-chandim.pdf}
+    % \includegraphics[width=0.48\textwidth]{figures/5-diffusion/diff_D_xekr-s2080-lcd.pdf}
+    % \includegraphics[width=0.48\textwidth]{figures/5-diffusion/diff_D_xekr-s2080-chandim.pdf}
+    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/diff_D_xekr-s2080-lcd.jpeg}
+    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/diff_D_xekr-s2080-chandim.jpeg}
     \caption{The xenon/krypton diffusion selectivity plotted against the ambient-pressure selectivity for a 20:80 Xe/Kr composition and color-coded by the LCD within a diffusion path D$_{if}$ (left panel) and by the average dimension of channels (right panel). }\label{fgr:perm_selec2080}
 \end{figure}
 
@@ -522,13 +539,13 @@ The xenon diffusion activation energy was calculated for all the 5,125 structure
   \centering
   \begin{subfigure}[b]{0.48\textwidth}
     \centering
-    \includegraphics[width=\textwidth]{figures/5-diffusion/difflog_barrier_Df_uff.pdf}
+    \includegraphics[width=\textwidth]{figures/5-diffusion/difflog_barrier_Df_uff.jpeg}
     \caption{All structures}\label{fgr:barrier_diffusion_a}
 \end{subfigure}
   \hfill
   \begin{subfigure}[b]{0.48\textwidth}
       \centering
-      \includegraphics[width=\textwidth]{figures/5-diffusion/difflog_barrier_Df_uff_2.pdf}
+      \includegraphics[width=\textwidth]{figures/5-diffusion/difflog_barrier_Df_uff_2.jpeg}
       \caption{PLD over \SI{6}{\angstrom}}\label{fgr:barrier_diffusion_b}
   \end{subfigure}
     \caption{ Scatterplots of the $\log_{10}$ of the diffusion coefficient (in \si{\square\cm\per\s}) compared to the diffusion activation energy $E\e{a}$ in \si{\kJ\per\mol} (a) for all structures  and (b) for the structures with a PLD above \SI{6}{\angstrom}. For all structures, the Pearson correlation coefficient is equal to $-0.77$, whereas for the restriction to structures with a PLD below \SI{6}{\angstrom} this correlation is stronger with a Pearson coefficient of $-0.85$. For structures with a PLD above \SI{6}{\angstrom}, this coefficient decreases to reach $-0.74$.}\label{fgr:barrier_diffusion}
@@ -540,7 +557,7 @@ This correlation between the energy barrier and the diffusion coefficient is con
 
 \begin{figure}[ht]
   \centering
-    \includegraphics[width=0.6\textwidth]{figures/5-diffusion/difflog_Df-uff298K_barrier.pdf}
+    \includegraphics[width=0.6\textwidth]{figures/5-diffusion/difflog_Df-uff298K_barrier.jpeg}
     \caption{ Scatterplot of the $\log_{10}$ of the diffusion coefficient (in \si{\square\cm\per\s}) as a function of the PLD values and labeled by the barrier activation energy. The higher barriers seem to correspond to lower diffusion coefficients, thus echoing the correlation observed in the previous figure~\ref{fgr:barrier_diffusion}.}\label{fgr:diff_pld_barrier}
 \end{figure}
 
